CHanged section and icon container properties to prevent overflow; also changed icon images for consistency

--- a/layout/_navigation.scss
+++ b/layout/_navigation.scss
@@ -23,8 +23,9 @@
 .section-title-container {
   display: flex;
   justify-content: flex-start;
+  align-items: center;
   width: 100%;
   height: 100px;
   position: absolute;
-  margin-left: 8%;
+  padding-left: 8%;
 }
