--- a/layout/_portfolio.scss
+++ b/layout/_portfolio.scss
@@ -1,7 +1,6 @@
 .portfolio {
   min-height: 100vh;
   background: linear-gradient(#d9d9d9, #7c8180 50%, #6e6e6e 90%);
-  position: relative;
 
   &__title-container {
     display: flex;
