--- a/layout/_skills.scss
+++ b/layout/_skills.scss
@@ -5,6 +5,7 @@
 
   &__img-container {
     max-height: 200px;
+    max-width: 100%;
     display: flex;
     justify-content: center;
     padding: 50px;
@@ -12,5 +13,6 @@
 
   &__image {
     object-fit: contain;
+    max-width: 100%;
   }
 }
