--- a/main.scss
+++ b/main.scss
@@ -10,6 +10,7 @@
   font-family: $font-body;
   color: $color-primary;
   scroll-behavior: smooth;
+  outline: 1px solid red;
 }
 
 @import "base/_typography";
